--- a/query_faq.html
+++ b/query_faq.html
@@ -275,7 +275,7 @@
   });
   $(document).ready(function () {
     $("li").click(function () {
-      $("li:first-child").css('background-color', 'blue');
+      $("li:first-child").css('color', 'blue');
     });
   });
 
