--- a/ajax-store.html
+++ b/ajax-store.html
@@ -1,72 +1,89 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Online Store</title>
-</head>
-<body>
+          <!DOCTYPE html>
+          <html>
+          <head>
+            <title>Online Store</title>
+          </head>
+          <script
+            src="http://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+          <script type="text/javascript" src="js/jquery.js"></script>
+          <script type="text/javascript" src="js/my-custom-javascript.js"></script>
+          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+          <style>
+            table, td, th {
+              border: 1px solid black;
+            }
 
-<h1>My Tool Store</h1>
+            table {
+              border-collapse: collapse;
+              width: 100%;
+            }
 
-<table id="products">
-  <thead>
-  <tr>
-    <th>Title</th>
-    <th>Quantity</th>
-    <th>Price</th>
-    <th>Categories</th>
-  </tr>
-  </thead>
-  <tbody id="insertProducts"></tbody>
-</table>
-<meta charset="UTF-8">
-<script
-  src="http://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/my-custom-javascript.js"></script>
+            th {
+              height: 50px;
+            }
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+            h1 {
+              justify-content: center;
+              align-content: center;
+            }
+          </style>
+          <body>
 
-<script>
-  (function() {
-    "use strict";
-    // TODO: Create an ajax GET request for /data/inventory.json
+          <h1>My Tool Store</h1>
 
-    var request = $.get("data/inventory.json");
+          <table id="products">
+            <thead>
+            <tr>
+              <th>Title</th>
+              <th>Quantity</th>
+              <th>Price</th>
+              <th>Categories</th>
+            </tr>
+            </thead>
+            <tbody id="insertProducts"></tbody>
+          </table>
+          <meta charset="UTF-8">
 
-    request.fail(function(jqXhr, status, error) {
-      console.log("There was an error! Check the console for details");
-      console.log("Response status: " + status);
-      console.log("Error object: " + error);
-    });
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    request.done(function(data) {
-      console.log(data);
+          <script>
+            (function() {
+              "use strict";
+              // TODO: Create an ajax GET request for /data/inventory.json
 
-      data.forEach(function(tool) {
-        addRowToTable(tool);
-      });
-    });
+              var request = $.get("data/inventory.json");
 
-    function addRowToTable(tool) {
+              request.fail(function(jqXhr, status, error) {
+                console.log("There was an error! Check the console for details");
+                console.log("Response status: " + status);
+                console.log("Error object: " + error);
+              });
 
-      var htmlString = "";
-      htmlString += "<tr>";
-      htmlString += "<td>" + tool.title + "</td>";
-      htmlString += "<td>" + tool.quantity + "</td>";
-      htmlString += "<td>$" + tool.price + "</td>";
-      htmlString += "<td>" + tool.categories + "</td>";
-      htmlString += "</tr>";
+              request.done(function(data) {
+                console.log(data);
 
-      $("#insertProducts").append(htmlString);
-    }
+                data.forEach(function(tool) {
+                  addRowToTable(tool);
+                });
+              });
 
+              function addRowToTable(tool) {
 
+                var htmlString = "";
+                htmlString += "<tr>";
+                htmlString += "<td>" + tool.title + "</td>";
+                htmlString += "<td>" + tool.quantity + "</td>";
+                htmlString += "<td>$" + tool.price + "</td>";
+                htmlString += "<td>" + tool.categories + "</td>";
+                htmlString += "</tr>";
 
+                $("#insertProducts").append(htmlString);
+              }
 
-  })();
-</script>
+            })();
+          </script>
 
-</body>
-</html>
+          </body>
+          </html>
