friday morning warmup

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -350,6 +350,27 @@
   }
 }
 
+
+//fizz buzz
+
+  function fizzBuzz(num) {
+    for (let i = 1; i <= num; i++) {
+      if (i % 15 == 0)
+        console.log("FizzBuzz");
+      else if (i % 3 == 0)
+        console.log("Fizz");
+      else if (i % 5 == 0)
+        console.log("Buzz");
+      else if (typeof num == isNaN);
+      return null;
+      else
+        console.log(i);
+    }
+  }
+
+  fizzBuzz(30);
+
+
 </script>
 </body>
 </html>
