--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Blog</title>
 </head>
 <body>
 
+<h1>This blog though wow</h1>
+
+
+<div id="posts"></div>
+<div id="updatePost"></div>
+<input type="button" value="update Blog" id="update"> update new things</button>
+<script
+  src="http://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/my-custom-javascript.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<script>
+  (function () {
+    // "use strict"
+
+
+$(document).ready(function(){
+  $.ajax("data/blog.json").done(function(json){
+    $.each(json,function(i, data) {
+      $("#posts").append('<h1>') +data.title + '</h1><p>' + data.date + '</p><p>' + data.content + '</p>');
+    });
+  });
+  });
+
+
+  $('input').click(function(type){
+  ajax.({
+  type: "POST",
+  url: ("data/blog.json"),
+  })
+  })
+
+</script>
+
 
 </body>
+
 </html>
