--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -1,39 +1,5 @@
 Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
-
-@BrianNBarton
-Learn Git and GitHub without any code!
-Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
-
-
-CodeupClassroom
-/
-hyperion-web-exercises
-4
-1
-2
-Code
-Issues
-Pull requests
-1
-Actions
-Projects
-Wiki
-Security
-Insights
-hyperion-web-exercises/dom-query-js.html
-@davidandstephens
-davidandstephens completed dom events exc
-Latest commit c3637eb 2 hours ago
-History
-2 contributors
-@trantbatey@davidandstephens
-82 lines (70 sloc)  2.98 KB
+Search or jum
 
 <!DOCTYPE html>
 <html>
