--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -11,8 +11,7 @@
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/my-custom-javascript.js"></script>
-
-
+  </head>
   <meta charset="UTF-8">
   <style>
 
