--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -1,50 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Blog</title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ajax Blog Exercise</title>
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/ajax-blog.css">
+
 </head>
 <body>
 
-<h1>This blog though wow</h1>
+<main class="container">
 
+  <h1 class="text-center">Ajax Blog Exercise</h1>
 
-<div id="posts"></div>
-<div id="updatePost"></div>
-<input type="button" value="update Blog" id="update"> update new things</button>
-<script
-  src="http://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/my-custom-javascript.js"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <div id="posts"></div>
 
+  <!--            <button onClick="window.location.href=window.location.href">Refresh Page</button>-->
+  <button id="reloadBtn" class="btn btn-primary">Reload</button>
+
+</main>
+
+<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script>
-  (function () {
-    // "use strict"
+  $(document).ready(function() {
+    "use strict";
 
+    function loadPosts() {
+      $.get("./data/blog.json").done(function(data) {
+        buildPostsHTML(data);
+      }).fail(function() {
+        console.log("Failed request");
+      });
+    }
 
-$(document).ready(function(){
-  $.ajax("data/blog.json").done(function(json){
-    $.each(json,function(i, data) {
-      $("#posts").append('<h1>') +data.title + '</h1><p>' + data.date + '</p><p>' + data.content + '</p>');
+    function buildPostsHTML(posts) {
+      var outputString = "";
+      posts.forEach(function(post) {
+        outputString += "<div class='well'>";
+        outputString += "<h4>" + post.date + "</h4>";
+        outputString += "<h2>" + post.title + "</h2>";
+        outputString += "<p>" + post.content + "</p>";
+        outputString += "<ul><li>" + post.categories.join("</li><li>") + "</li></ul>";
+        outputString += "</div>";
+      });
+      $('#posts').html(outputString);
+    }
+    loadPosts();
+
+    // $("#reloadBtn").click(loadPosts);
+
+    $("#reloadBtn").on("click", function() {
+      $("#posts").load( "ajax-blog.html #posts" );
     });
+
   });
-  });
-
-
-  $('input').click(function(type){
-  ajax.({
-  type: "POST",
-  url: ("data/blog.json"),
-  })
-  })
-
 </script>
-
-
 </body>
-
 </html>
