--- a/dom-review.html
+++ b/dom-review.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-    <script
-      src="http://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/my-custom-javascript.js"></script>
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script type=”text/javascript” src=https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js></script>
 
   <title>DOM Review</title>
 
@@ -51,23 +49,31 @@
     //type in input, and append it to the list when clicked
     $('#add-to-list').click(function () {
       $('#favorite-food').append('<li>' + $('#input').val());
-    };
+    });
 
 
     //Heading Change me double clicked, change background color to purple
 
 
-    $('#change-me').dblclick(function () {
+    $('#change-me').click(function () {
       $(this).toggleClass('heading');
     });
 
-    //Input Cohort Name. When butt on is clicked text updates name of cohort
+    //Input Cohort Name. When button is clicked text updates name of cohort
 
 
     $('#cohort-name').click(function () {
       var newTitle = $('#cohort-name').val();
-      $('#my-cohort').text(newTitle)
+      $('#my-cohort').append($('#input'.val()))
     });
+
+    //
+    // $('#change-cohort').click(function () {
+    // $('#my-cohort').append('<li>' + $('#input').val());
+    // });
+
+
+
 
     //Highlight button clicked, change background color of cohort name to yellow
 
@@ -78,7 +84,8 @@
     //Javascript changes background-color of the container to the pink 3 seconds
 
     setTimeout(function(){
-      document.getElementById("container")[0].style.backgroundColor = "pink";
+      document.getElementById("container")[0]
+        .style.backgroundColor = "pink";
     },3000);
   });
 </script>
