--- a/weather_map.html
+++ b/weather_map.html
@@ -19,7 +19,6 @@
 
 <body>
 
-<h1 class="container-fluid row justify-content-center"> Weather Map</h1>
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">San Antonio Weather</h1>
@@ -92,7 +91,8 @@
   </section>
   </container>
 </div>
-<div id='map'></div>
+<div id='map' class="container-fluid justify-content-center"></div>
+<pre id="coordinates" class="coordinates"></pre>
 
 <!-- Mapbox JS -->
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
