--- a/weather_map.html
+++ b/weather_map.html
@@ -21,13 +21,20 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">San Antonio Weather</h1>
+    <h1 class="display-4" id="place">San Antonio Weather</h1>
     <p class="lead">Weekly Forecast  </p>
   </div>
 </div>
 <!--// make a carosel-->
 <!--// give it a shiny background-->
 <!--//get that map working-->
+
+
+
+
+
+
+
 
 <div class="container-fluid">
 
@@ -91,6 +98,25 @@
   </section>
   </container>
 </div>
+
+
+<!--carosel begin-->
+
+</div>
+<!--/.Second slide-->
+
+
+
+</div>
+<!--/.Slides-->
+
+</div>
+<!--/.Carousel Wrapper-->
+<!--///carosel end -->
+
+
+
+
 <div id='map' class="container-fluid justify-content-center"></div>
 <pre id="coordinates" class="coordinates"></pre>
 
