--- a/js/say-hello.html
+++ b/js/say-hello.html
@@ -7,10 +7,10 @@
 <body>
 
 
-
+<h1>say hello modules</h1>
 
 <script src="index.js"></script>
-<script src=""></script>
+<script src="js/main.js"></script>
 <script src=""></script>
 </body>
 </html>
