--- a/objects.html
+++ b/objects.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<script src="js/objects.js"></script>
+<!--<script src="js/objects.js"></script>-->
+<script>
+  let numbers = [1, 2, 3, 4, 5];
+  numbers.map(n => n * 3)
+
+  console.log(numbers)
+</script>
 </body>
 </html>
