--- a/rocky-mountain.html
+++ b/rocky-mountain.html
@@ -11,7 +11,7 @@
 
 <!--I recently took a trip to the rockies in BC, and I said to myself - hey, why not make my own mountain range?And so I did.-->
 
-
+<!--did-->
 
 <!--No, it&#x27;s not complete...." />-->
 <!--<meta name="theme-color" content="#121212" />-->
